fix(Style): removed antialiasing on font & reduced letter spacing (#282)

--- a/packages/react/src/styles/body.scss
+++ b/packages/react/src/styles/body.scss
@@ -7,8 +7,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 0.875rem;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  letter-spacing: 0.025rem;
+  letter-spacing: 0.015rem;
   margin: 0;
   padding: 0;
 }
